style.css
@font-face {
    font-family: 'Roboto';
    src: url("assets/fonts/Roboto-Medium.ttf");
}

* {
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    min-height: 100vh;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    font-family: 'Roboto';
    font-size: 16px;
    line-height: 130%;
}

h1 {
    font-size: 42px;
    padding-bottom: 10px;
    text-align: center;
}

h2 {
    font-size: 28px;
    color: #5d8062;
    text-align: left;
}

span {
    border-bottom: 3px solid #829985;
    padding-bottom: 10px;
}

.container {
    max-width: 1440px;
    margin: 0 auto;
}

/* header style start */
.header {
    background-color: #829985;
}
.nav-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    align-items: center;
    list-style: none;
}

.nav a {
    padding: 0 20px;
    line-height: 50px;
    color: rgb(248, 237, 237);
    text-decoration: none;
    transition: color 0.5s;
}

.nav a:hover {
    color: #4d2323;
}

/* header style end */

/* main style start */
.main .container{
    display: flex;
    flex-wrap: wrap;
    align-items: stretch;
}

.section {
    width: 48%;
    padding: 2% 2% 1%;
    border-bottom: 1px solid grey;
    margin: 0 1%;
}
.prof {
    text-align: center;
}

.section:first-child {
    width: 98%;
    padding: 2% 7%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-evenly;
    border-bottom: 8px solid gray;
}
.section:last-child {
    margin-bottom: 150px;
}
.section img {
    width: 150px;
    height: 150px;
    border-radius: 50px;
    margin: 0 50px;
    background-color: #829985;
}
.section ul {
    list-style: none;
    padding-left: 0;
}

.section a {
    color: #829985;
    text-decoration: none;
    transition: color 0.5s;
}
.section a:hover {
    color: #4d2323;
}
.section pre {
    overflow: scroll;
}

@media (max-width: 768px) {
    h1 {
        font-size: 28px;
    }
    .nav-list {
        justify-content: space-between;
    }
    .section {
        width: 100%;
    }
}

/* main style end */

/* footer style start*/
.footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    background-color: #829985;
}
.footer .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.footer a {
    padding: 0 20px;
    line-height: 50px;
    color: rgb(248, 237, 237);
    text-decoration: none;
    transition: color 0.5s;
}

.footer a:hover {
    color: #4d2323;
}
.footer img {
    width: 100px;
    height: 60px;
}
/* footer style end*/

